--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     paths-ignore:
       - "CHANGELOG.adoc"
       - "docker-compose.yml"
+      - ".github/**"
       - ".github/PULL_REQUEST_TEMPLATE.md"
       - "doc/**"
     branches:
