--- a/.github/workflows/generate-sbom.yml
+++ b/.github/workflows/generate-sbom.yml
@@ -1,15 +1,25 @@
 name: Generate SBOM
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - workflow-dev-test
+  workflow_dispatch:
 
 jobs:
   generate-backend-sbom:
     runs-on: ubuntu-latest
     steps:
-      - name: Print test message
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Java SDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: "temurin"
+
+      - name: Generate back-end sbom
+        working-directory: ./backend/application
         run: |
-          echo "Hello World"
+          mvn org.cyclonedx:cyclonedx-maven-plugin:2.7.8:makeAggregateBom  --settings ../../settings.xml
