dev in progress

--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -9,13 +9,19 @@ on:
 env:
   JAVA_VERSION: '17'
   JAVA_DISTRO: 'temurin'
+  PRODUCT_PATH: 'backend/application'
+  SBOM_TYPE: 'makeAggregateBom'
+  SBOM_NAME: 'backend_application_sbom.json'
+
+permissions:
+  contents: read
 
 jobs:
   generate-backend-sbom:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Java SDK
         uses: actions/setup-java@v4
@@ -24,14 +30,13 @@ jobs:
           distribution: ${{ env.JAVA_DISTRO }}
 
       - name: Generate sbom
-        working-directory: ./backend/application
         env:
           PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mvn org.cyclonedx:cyclonedx-maven-plugin:2.7.8:makeAggregateBom  --settings ../../settings.xml
+          mvn org.cyclonedx:cyclonedx-maven-plugin:2.7.8:${{ env.SBOM_TYPE }} -f "{{ env.PRODUCT_PATH }}/pom.xml" --settings settings.xml
 
       - name: Upload sbom
         uses: actions/upload-artifact@v3
         with:
           name: backend-end-sbom.json
-          path: ./backend/application/target/bom.json
+          path: {{ env.PRODUCT_PATH }}/target/{{ env.SBOM_NAME }}
