--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -33,10 +33,10 @@ jobs:
         env:
           PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mvn org.cyclonedx:cyclonedx-maven-plugin:2.7.8:${{ env.SBOM_TYPE }} -f "{{ env.PRODUCT_PATH }}/pom.xml" --settings settings.xml
+          mvn org.cyclonedx:cyclonedx-maven-plugin:2.7.8:$SBOM_TYPE -f "$PRODUCT_PATH/pom.xml" --settings settings.xml
 
       - name: Upload sbom
         uses: actions/upload-artifact@v3
         with:
           name: backend-end-sbom.json
-          path: {{ env.PRODUCT_PATH }}/target/{{ env.SBOM_NAME }}
+          path: ${{ env.PRODUCT_PATH }}/target/${{ env.SBOM_NAME }}
