--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -1,5 +1,6 @@
 name: Generate SBOM
 
+# WIP: events 
 on:
   push:
     branches:
@@ -36,7 +37,7 @@ jobs:
           mvn org.cyclonedx:cyclonedx-maven-plugin:2.7.8:$SBOM_TYPE -f "$PRODUCT_PATH/pom.xml" --settings settings.xml
 
       - name: Upload sbom
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ env.SBOM_NAME }}
           path: ${{ env.PRODUCT_PATH }}/target/bom.json
