--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -1,4 +1,4 @@
-name: Generate SBOM
+name: Generate Maven SBOM
 
 # WIP: events 
 on:
@@ -10,9 +10,10 @@ on:
 env:
   JAVA_VERSION: '17'
   JAVA_DISTRO: 'temurin'
+  SBOM_NAME: 'backend_application_sbom.json'
   PRODUCT_PATH: 'backend/application'
   SBOM_TYPE: 'makeAggregateBom'
-  SBOM_NAME: 'backend_application_sbom.json'
+  PLUGIN_VERSION: '2.7.8'
 
 permissions:
   contents: read
@@ -34,7 +35,7 @@ jobs:
         env:
           PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mvn org.cyclonedx:cyclonedx-maven-plugin:2.7.8:$SBOM_TYPE -f "$PRODUCT_PATH/pom.xml" --settings settings.xml
+          mvn org.cyclonedx:cyclonedx-maven-plugin:$PLUGIN_VERSION:$SBOM_TYPE -f "$PRODUCT_PATH/pom.xml" --settings settings.xml
 
       - name: Upload sbom
         uses: actions/upload-artifact@v4
