--- a/.github/workflows/generate-npm-sbom.yml
+++ b/.github/workflows/generate-npm-sbom.yml
@@ -32,8 +32,10 @@ jobs:
           registry-url: ${{ env.REGISTRY_URL }}
           
       - name: Setup required credentials and flags
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ github.token }}" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=$TOKEN" >> .npmrc
           echo "CI=true" >> $GITHUB_ENV
 
       - name: Install dependencies
