--- a/.github/workflows/generate-npm-sbom.yml
+++ b/.github/workflows/generate-npm-sbom.yml
@@ -16,6 +16,7 @@ env:
 
 permissions:
   contents: read
+  packages: read
 
 jobs:
   generate-sbom:
@@ -32,10 +33,8 @@ jobs:
           registry-url: ${{ env.REGISTRY_URL }}
           
       - name: Setup required credentials and flags
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ github.token }}" >> .npmrc
           echo "CI=true" >> $GITHUB_ENV
           npm ci
 
