--- a/.github/workflows/generate-npm-sbom.yml
+++ b/.github/workflows/generate-npm-sbom.yml
@@ -11,8 +11,6 @@ env:
   NODE_VERSION: '18.7'
   REGISTRY_URL: 'https://npm.pkg.github.com/'
   SBOM_NAME: 'frontend.json'
-  PRODUCT_PATH: './'
-  PLUGIN_VERSION: '2.1.0'
 
 permissions:
   contents: read
@@ -32,11 +30,15 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: ${{ env.REGISTRY_URL }}
           
-      - name: Setup required credentials and flags
+      - name: Install dependencies
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{ github.token }}" >> .npmrc
           echo "CI=true" >> $GITHUB_ENV
           npm ci
+
+      - name: Install cyclonedx-npm
+        run: |
+          npm install --global @cyclonedx/cyclonedx-npm
 
       - name: Generate SBOM
         run: |
