--- a/.github/workflows/generate-npm-sbom.yml
+++ b/.github/workflows/generate-npm-sbom.yml
@@ -11,6 +11,7 @@ env:
   NODE_VERSION: '18.7'
   REGISTRY_URL: 'https://npm.pkg.github.com/'
   SBOM_NAME: 'frontend.json'
+  PRODUCT_PATH: './'
 
 permissions:
   contents: read
