dev in progress

--- a/.github/workflows/generate-npm-sbom.yml
+++ b/.github/workflows/generate-npm-sbom.yml
@@ -36,6 +36,7 @@ jobs:
           echo "//npm.pkg.github.com/:_authToken=${{ github.token }}" >> .npmrc
           echo "CI=true" >> $GITHUB_ENV
           npm ci
+          npm run build
 
       - name: Install cyclonedx-npm
         run: |
