dev in progress

--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -1,10 +1,12 @@
 name: Generate Maven SBOM
 
-# WIP: events 
 on:
   push:
-    branches:
-      - workflow-dev-test
+    branches: 
+      - "main"
+      - "workflow-dev-test" # TODO: remove
+    paths:
+      - 'backend/application/**/pom.xml'
   workflow_dispatch:
 
 env:
