--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -5,17 +5,18 @@ on:
     branches: 
       - "main"
       - "workflow-dev-test" # TODO: remove 
-    paths:
-      - 'backend/application/**/pom.xml'
+    # paths:
+    #   - 'backend/application/**/pom.xml'
   workflow_dispatch:
 
 env:
   JAVA_VERSION: '17'
   JAVA_DISTRO: 'temurin'
-  SBOM_NAME: 'backend_application_sbom.json'
+  REPO_NAME: 'iliescuioana/syson'
   PRODUCT_PATH: 'backend/application'
-  SBOM_TYPE: 'makeAggregateBom'
   PLUGIN_VERSION: '2.7.8'
+  SBOM_NAME: 'backend_application_sbom.json'
+  SBOM_TYPE: 'makeAggregateBom'
 
 permissions:
   contents: read
@@ -44,3 +45,18 @@ jobs:
         with:
           name: ${{ env.SBOM_NAME }}
           path: ${{ env.PRODUCT_PATH }}/target/bom.json
+
+    upload-sbom:
+      if: github.repository == '$REPO_NAME'
+      runs-on: ubuntu-latest
+      needs: [ 'generate-sbom' ]
+      steps:
+        - uses: actions/download-artifact@v4
+          with:
+            name: ${{ env.SBOM_NAME }}
+
+        - name: Extract version
+          id: version
+          run: |
+            VERSION="$(jq -r '.metadata.component.version' < ${{ env.SBOM_NAME }})"
+            echo "version=$(echo ${VERSION})" >> $GITHUB_OUTPUT
