dev in progress

--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -12,7 +12,6 @@ on:
 env:
   JAVA_VERSION: '17'
   JAVA_DISTRO: 'temurin'
-  REPO_NAME: 'iliescuioana/syson'
   PRODUCT_PATH: 'backend/application'
   PLUGIN_VERSION: '2.7.8'
   SBOM_NAME: 'backend_application_sbom.json'
@@ -39,7 +38,6 @@ jobs:
           PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mvn org.cyclonedx:cyclonedx-maven-plugin:$PLUGIN_VERSION:$SBOM_TYPE -f "$PRODUCT_PATH/pom.xml" --settings settings.xml
-          echo $REPO_NAME
 
       - name: Upload sbom
         uses: actions/upload-artifact@v4
@@ -48,7 +46,7 @@ jobs:
           path: ${{ env.PRODUCT_PATH }}/target/bom.json
 
   upload-sbom:
-    if: github.repository == $REPO_NAME
+    if: github.repository == 'iliescuioana/syson'
     runs-on: ubuntu-latest
     needs: [ 'generate-sbom' ]
     steps:
