--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -57,5 +57,5 @@ jobs:
       - name: Extract version
         id: version
         run: |
-          VERSION="$(jq -r '.metadata.component.version' < ${{ env.SBOM_NAME }})"
+          VERSION="$(jq -r '.metadata.component.version' < $SBOM_NAME)"
           echo "version=$(echo ${VERSION})" >> $GITHUB_OUTPUT
