dev in progress

--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -57,6 +57,5 @@ jobs:
       - name: Extract version
         id: version
         run: |
-          ls -R
-          VERSION="$(jq -r '.metadata.component.version' < $SBOM_NAME)"
+          VERSION="$(jq -r '.metadata.component.version' < bom.json)"
           echo "version=$(echo ${VERSION})" >> $GITHUB_OUTPUT
