--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -12,6 +12,7 @@ on:
 env:
   JAVA_VERSION: '17'
   JAVA_DISTRO: 'temurin'
+  PRODUCT_NAME: 'backend_application'
   PRODUCT_PATH: 'backend/application'
   PLUGIN_VERSION: '2.7.8'
   SBOM_NAME: 'backend_application_sbom.json'
@@ -59,3 +60,5 @@ jobs:
         run: |
           VERSION="$(jq -r '.metadata.component.version' < bom.json)"
           echo "version=$(echo ${VERSION})" >> $GITHUB_OUTPUT
+          echo $VERSION
+          echo $PRODUCT_NAME
