--- a/.github/workflows/generate-maven-sbom.yml
+++ b/.github/workflows/generate-maven-sbom.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches: 
       - "main"
-      - "workflow-dev-test" # TODO: remove 
-    # paths:
-    #   - 'backend/application/**/pom.xml'
+    paths:
+      - 'backend/application/**/pom.xml'
   workflow_dispatch:
 
 env:
