--- a/.github/workflows/generate-npm-sbom.yml
+++ b/.github/workflows/generate-npm-sbom.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches: 
       - "main"
-      - "workflow-dev-test"  # TODO: remove 
-    # paths:
-    #   - "package.json"
-    #   - "package-lock.json"
+    paths:
+      - "package.json"
+      - "package-lock.json"
   workflow_dispatch:
 
 env:
