--- a/.github/workflows/generate-npm-sbom.yml
+++ b/.github/workflows/generate-npm-sbom.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: 
       - "main"
+      - "workflow-dev-test"  # TODO: remove 
     paths:
       - "package.json"
       - "package-lock.json"
