test sbom version accuracy improvements

--- a/.github/workflows/generate-npm-sbom.yml
+++ b/.github/workflows/generate-npm-sbom.yml
@@ -8,7 +8,14 @@ on:
     paths:
       - "package.json"
       - "package-lock.json"
+    tags:
+      - "v*"
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version'
+        default: 'main'
+        required: true
 
 env:
   NODE_VERSION: '18.7'
@@ -30,6 +37,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.inputs.version }}
 
       - name: Setup Node SDK
         uses: actions/setup-node@v4
@@ -69,8 +79,22 @@ jobs:
       - name: Extract version
         id: version
         run: |
+          event="${{ github.event_name }}"
+          ref="${{ github.ref }}"
+          input="${{ github.event.inputs.version }}"
+
           VERSION="$(jq -r '.metadata.component.version' < bom.json)"
+
+          if [[ "$event" == "push" && "$ref" == refs/heads/* ]] || \
+            [[ "$event" == "workflow_dispatch" && ! "$input" =~ ^v ]]; then
+            VERSION="${VERSION}@dev"
+          fi
+
           echo "version=$(echo ${VERSION})" >> $GITHUB_OUTPUT
+          echo "Event: $event"
+          echo "Ref: $ref"
+          echo "Input: $input"
+          echo "Version: $VERSION"
       - uses: DependencyTrack/gh-upload-sbom@48feab3080ff9e8f51f4d21861d9fc914eb744f5 # v3.1.0
         with:
           serverHostname: 'sbom.eclipse.org'
